force-app/main/default/objects/Tarjeta_de_Credito__c/Tarjeta_de_Credito__c.object-meta.xml
<CustomObject>
    <description>El cliente nos solicita poder agregar todos los datos de la tarjeta de crédito en un objeto “custom” de 
forma tal que se puedan asociar varias tarjetas a un cliente. Por requerimientos del departamento de 
seguridad del banco, nos pide que esta información sea de “forma segura”. Este es un requisito 
indispensable para la implementación de Salesforce en la organización, y es nuestro deber proponer 
una forma de cubrir este requerimiento de forma tal que se garantice no solo la seguridad de la 
información, sino también la trazabilidad de cualquier cambio en la misma.</description>
    <label>Tarjeta de Credito</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Tarjeta de Credito Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarjetas de Credito</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>