force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Banco_Emisor__c.field-meta.xml
<CustomField>
    <fullName>Banco_Emisor__c</fullName>
    <label>Banco Emisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>