force-app/main/default/objects/Tarjeta_de_Credito__c/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV</label>
    <length>3</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>