force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Fecha_de_emisi_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_emisi_n__c</fullName>
    <label>Fecha de emisión</label>
    <type>Date</type>
</CustomField>