force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento__c</fullName>
    <label>Fecha Vencimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>