force-app/main/default/objects/Tarjeta_de_Credito__c/fields/L_mite_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>L_mite_de_cr_dito__c</fullName>
    <label>Límite de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>