force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Numero_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Numero_Tarjeta__c</fullName>
    <description>Encrypted Text (16), requerido, encriptado</description>
    <label>Numero Tarjeta</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>