force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Tipo_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Tarjeta__c</fullName>
    <label>Tipo Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>