force-app/main/default/objects/Tarjeta_de_Credito__c/fields/Ultimos_4_Digitos__c.field-meta.xml
<CustomField>
    <fullName>Ultimos_4_Digitos__c</fullName>
    <description>Últimos 4 dígitos: Text (4), requerido</description>
    <label>Ultimos 4 Digitos</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>